fix: Corrects padding to avoid header overlap (#836)

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -90,7 +90,7 @@ div.highlight-container {
 
 	& > main {
 		min-height: 95%;
-		padding-top: calc(@header-height + 2.5rem); // 96px for banner
+		padding-top: @header-and-banner-height;
 		display: block; // Fix IE11 layout
 	}
 }
