--- a/src/style/variables.less
+++ b/src/style/variables.less
@@ -1,4 +1,5 @@
 @header-height: 3.5rem; // 56px
+@header-and-banner-height: @header-height + 2.5rem; // 96px with banner
 @header-mobile-breakpoint: 50rem;
 @sidebar-width: 20rem;
 @sidebar-break: ~'(min-width: 900px)';
